# student-copilot

./: package-lock.json  package.json  tailwind.config.js
backend/: eslint.config.js  package.json  tsconfig.json
backend/@eslint/config@latest/: README.md
backend/drizzle/: 0000_familiar_true_believers.sql  0001_aspiring_fat_cobra.sql  0002_gorgeous_nebula.sql  0003_public_slayback.sql  0004_wandering_dark_phoenix.sql  0005_parallel_lizard.sql  0006_giant_ultragirl.sql  0007_curious_brother_voodoo.sql  0008_flippant_kree.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  _journal.json
backend/src/: index.ts
backend/src/db/: index.ts  s3.ts  schema.ts
backend/src/middleware/: auth.ts
backend/src/types/: folders.ts  notes.ts  (+1 more)
frontend/: eslint.config.js  index.html  package.json  pettier.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: migrations.rs
src/components/: delete-confirmation.tsx  error-display.tsx  notes-sidebar.tsx
src/context/: theme-provider.tsx
src/layouts/: notes-layout.tsx  notes.tsx
src/lib/: db.ts  supabase.ts
src/pages/: forgot-password-page.tsx  home-page.tsx  note-create-page.tsx  note-page.tsx  reset-password-page.tsx
src/routes/: __root.tsx  _notes.tsx
(+119 files in other folders)
